Integration tests para /roles/** refeito | classes Handlers renomeadas